feat: Add resend OTP and enhance product detail page
This commit introduces two major features to improve user experience: the ability to resend an OTP during registration and the display of related and trending products on the product detail page.

Resend OTP Functionality:
- A new endpoint `/sign-up/resend-otp` is added to `SignUpController` to handle OTP resend requests.
- The `UserService` is updated with logic to generate a new OTP, set a new expiration time, and email it to the user.
- The `otp.html` template now includes a "Resend OTP" button and associated JavaScript to call the new endpoint asynchronously.

Product Detail Page Enhancements:
- The page now displays a list of "Related Products" from the same category and a "Trending Products" section based on view count.
- New query methods were added to `ProductsRepository` and `ProductService` to fetch this data.
- The product quantity input has been improved with "+" and "-" buttons for better usability.

--- a/src/main/resources/templates/client/component/headerClient.html
+++ b/src/main/resources/templates/client/component/headerClient.html
@@ -1,17 +1,5 @@
-<header class="pb-md-4 pb-0" th:fragment="headerClient" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" style="position: fixed; top: 0; left: 0; right: 0; z-index: 1000; background-color:#ffffff; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
-    <div class="header-top">
-        <div class="container-fluid-lg">
-            <div class="row">
-                <div class="col-xxl-3 d-xxl-block d-none">
-                    <div class="top-left-header">
-                        <i class="iconly-Location icli text-white"></i>
-                        <span class="text-white">Only Online</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
+<header class="pb-md-4 pb-0" th:fragment="headerClient" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" style="position: fixed; top: 0; left: 0; right: 0; z-index: 1000; background-color:#ffffff; box-shadow: 0 2px 5px rgba(0,0,0,0.1);border-top: 1px solid #cfcfcf;">
+   
     <div class="top-nav top-header sticky-header" >
         <div class="container-fluid-lg">
             <div class="row">
