--- a/src/main/resources/templates/client/flowerList.html
+++ b/src/main/resources/templates/client/flowerList.html
@@ -1268,7 +1268,7 @@
                                 <div class="product-footer">
                                     <div class="product-detail">
                                         <span class="span-name">${item.categoryName}</span>
-                                        <a href="product-left-thumbnail.html">
+                                        <a href="productdetail.html">
                                             <h5 class="name">${item.productName}</h5>
                                         </a>
                                         <p class="text-content mt-1 mb-2 product-content">Cheesy feet cheesy grin brie.
