--- a/src/main/resources/templates/client/checkout.html
+++ b/src/main/resources/templates/client/checkout.html
@@ -3,6 +3,7 @@
 
 
 <!-- Mirrored from themes.pixelstrap.com/fastkart/front-end/checkout.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Oct 2025 16:59:27 GMT -->
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -115,7 +116,7 @@
     <!-- Checkout section Start -->
     <section class="checkout-section-2 section-b-space">
         <div class="container-fluid-lg">
-            <div class="row g-sm-4 g-3" style= "padding-top: 130px;">
+            <div class="row g-sm-4 g-3" style="padding-top: 130px;">
                 <div class="col-lg-8">
                     <div class="left-sidebar-checkout">
                         <div class="checkout-detail-box">
@@ -243,7 +244,8 @@
                                                             <div class="custom-form-check form-check mb-0">
                                                                 <label class="form-check-label" for="cash"><input
                                                                         class="form-check-input mt-0" type="radio"
-                                                                        name="flexRadioDefault" id="cash" value="Cash" > Cash
+                                                                        name="flexRadioDefault" id="cash" value="Cash">
+                                                                    Cash
                                                                     On Delivery</label>
                                                             </div>
                                                         </div>
@@ -259,7 +261,8 @@
                                                             <div class="custom-form-check form-check mb-0">
                                                                 <label class="form-check-label" for="credit"><input
                                                                         class="form-check-input mt-0" type="radio"
-                                                                        name="flexRadioDefault" id="credit" value="VNpay">
+                                                                        name="flexRadioDefault" id="credit"
+                                                                        value="VNpay">
                                                                     Net Banking</label>
                                                             </div>
                                                         </div>
@@ -290,7 +293,8 @@
                                 <li th:each="item : ${lsCart}">
                                     <img th:src="${item.productImage}"
                                         class="img-fluid blur-up lazyloaded checkout-image" alt="">
-                                    <h4 th:text="${item.productName}">Broccoli <span th:text="${item.stockQuantity}">X 2</span></h4>
+                                    <h4 th:text="${item.productName}">Broccoli <span th:text="${item.stockQuantity}">X
+                                            2</span></h4>
                                     <h4 class="price" th:text="${item.productPrice}">$29.69</h4>
                                 </li>
                             </ul>
@@ -326,8 +330,12 @@
                                 </li>
                             </ul>
                         </div>
-                        <input type="hidden" name="amount" id="amount" th:value="${sumTotalCart}"/>
-                        <button class="btn theme-bg-color text-white btn-md w-100 mt-4 fw-bold" onclick="pay()">Place Order</button>
+                        <form id="checkoutForm" method="POST">
+                            <input type="hidden" name="amount" id="amount" th:value="${sumTotalCart}" />
+                            <input type="hidden" name="addressId" id="addressIdHiddenInput" />
+                            <button type="button" class="btn theme-bg-color text-white btn-md w-100 mt-4 fw-bold"
+                                onclick="pay()">Place Order</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -918,59 +926,77 @@
 
     <!-- theme setting js -->
     <script src="../assets/js/theme-setting.js"></script>
-<script>
-    function pay(){
-        console.log("Pay function called");
-        const amount = document.getElementById('amount').value;
-        const paymentMethod = document.querySelector('input[name="flexRadioDefault"]:checked').value;
-        const addressId = document.getElementById('addressIdSelected').value
-        console.log(amount)
-        try {
-            fetch(`/api/payment/create?amount=${amount}&paymentMethod=${paymentMethod}&addressId=${addressId}`, {
-                method: 'POST'
-            }).then(response => response.json())
-                .then(data => {
-                    if(data.code==='00'){
-                        window.location.href = data.data;
+    <script>
+        function pay() {
+            console.log("Pay function called");
 
-                    }else {
-                        alert(data.message);
-                    }
-                })
-        } catch (error) {
-            console.log(error);
+            const paymentMethodRadio = document.querySelector('input[name="flexRadioDefault"]:checked');
+            if (!paymentMethodRadio) {
+                alert("Please select a payment method.");
+                return;
+            }
+            const paymentMethod = paymentMethodRadio.value;
 
+            const addressIdInput = document.getElementById('addressIdSelected');
+            if (!addressIdInput || !addressIdInput.value) {
+                alert("Please select a delivery address.");
+                return;
+            }
+            const addressId = addressIdInput.value;
+            const amount = document.getElementById('amount').value;
+
+            const checkoutForm = document.getElementById('checkoutForm');
+            document.getElementById('addressIdHiddenInput').value = addressId;
+
+            if (paymentMethod === 'VNpay') {
+                // Logic VNPay vẫn dùng fetch
+                fetch(`/api/payment/create?amount=${amount}&paymentMethod=${paymentMethod}&addressId=${addressId}`, {
+                    method: 'POST'
+                }).then(response => response.json())
+                    .then(data => {
+                        if (data.code === '00') {
+                            window.location.href = data.data;
+                        } else {
+                            alert(data.message);
+                        }
+                    }).catch(error => {
+                        console.error("VNPay Error:", error);
+                        alert("An error occurred during VNPay payment processing.");
+                    });
+            } else if (paymentMethod === 'Cash') {
+                // Logic COD sẽ submit form
+                checkoutForm.action = '/order/create-cod';
+                checkoutForm.submit();
+            } else {
+                alert("Invalid payment method selected.");
+            }
         }
 
-    }
+    </script>
+    <script>
+        const radios = document.querySelectorAll('input[name="flexRadioDefault"]');
 
-
-
-</script>
-<script>
-    const radios = document.querySelectorAll('input[name="flexRadioDefault"]');
-
-    radios.forEach(radio => {
-        radio.addEventListener('change', function() {
-            console.log("Đã chọn: " + this.value);
-            // bạn có thể gán vào biến global hoặc input ẩn nếu muốn gửi về server
+        radios.forEach(radio => {
+            radio.addEventListener('change', function () {
+                console.log("Đã chọn: " + this.value);
+                // bạn có thể gán vào biến global hoặc input ẩn nếu muốn gửi về server
+            });
         });
-    });
-    function getAddress(){
-        try{
-            fetch("/addresses",{
-                method : "GET",
-                headers : {
-                    "Content-Type" : "application/json"
-                }
-            }).then(res => res.json())
-                .then(data => {
-                    console.log(data)
+        function getAddress() {
+            try {
+                fetch("/addresses", {
+                    method: "GET",
+                    headers: {
+                        "Content-Type": "application/json"
+                    }
+                }).then(res => res.json())
+                    .then(data => {
+                        console.log(data)
 
-                    const content = document.getElementById("addressTable");
-                    const rows = data.data.map(item=> {
-                        if(item.default){
-                            return `
+                        const content = document.getElementById("addressTable");
+                        const rows = data.data.map(item => {
+                            if (item.default) {
+                                return `
                              <div class="col-xxl-6 col-lg-12 col-md-6">
                                                     <div class="delivery-address-box">
                                                         <div>
@@ -1012,24 +1038,25 @@
                                                     </div>
                                                 </div>
                             `
-                        }
-                    }).join('');
-                    content.innerHTML = rows;
+                            }
+                        }).join('');
+                        content.innerHTML = rows;
 
 
 
 
 
-                })
-        }catch (e) {
+                    })
+            } catch (e) {
+
+            }
 
         }
-
-    }
-    getAddress()
-</script>
+        getAddress()
+    </script>
 </body>
 
 
 <!-- Mirrored from themes.pixelstrap.com/fastkart/front-end/checkout.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Oct 2025 16:59:28 GMT -->
+
 </html>
