--- a/src/main/resources/templates/manager/orders/list.html
+++ b/src/main/resources/templates/manager/orders/list.html
@@ -246,13 +246,13 @@
                     <div class="col-md-3">
                     <input type="text" name="keyword" placeholder="Search by user" th:value="${keyword}" class="form-control" >
                     </div>
-<!--                    <div class="col-md-2">-->
-<!--                    <select name="paymentMethod" class="form-select">-->
-<!--                        <option value="all" th:selected="${paymentMethod == 'all'}">All</option>-->
-<!--                        <option value="VNPay" th:selected="${paymentMethod == 'VNPay'}">VNPay</option>-->
-<!--                        <option value="COD" th:selected="${paymentMethod == 'COD'}">COD</option>-->
-<!--                    </select>-->
-<!--                    </div>-->
+                    <div class="col-md-2">
+                    <select name="paymentMethod" class="form-select">
+                        <option value="all" th:selected="${paymentMethod == 'all'}">All</option>
+                        <option value="VNPay" th:selected="${paymentMethod == 'VNPay'}">VNPay</option>
+                        <option value="COD" th:selected="${paymentMethod == 'COD'}">COD</option>
+                    </select>
+                    </div>
                     <div class="col-md-2">
                     <select name="statusId" class="form-select">
                         <option value="">All status</option>
