--- a/src/main/resources/templates/client/login.html
+++ b/src/main/resources/templates/client/login.html
@@ -178,21 +178,21 @@
                             </form>
                         </div>
 
-                        <div class="other-log-in">
-                            <h6>or</h6>
-                        </div>
+<!--                        <div class="other-log-in">-->
+<!--                            <h6>or</h6>-->
+<!--                        </div>-->
 
-                        <div class="log-in-button">
-                            <ul>
-                                <li>
-                                    <a href="https://www.google.com/" class="btn google-button w-100">
-                                        <img src="../assets/images/inner-page/google.png" class="blur-up lazyload"
-                                            alt=""> Log In with Google
-                                    </a>
-                                </li>
+<!--                        <div class="log-in-button">-->
+<!--                            <ul>-->
+<!--                                <li>-->
+<!--                                    <a href="https://www.google.com/" class="btn google-button w-100">-->
+<!--                                        <img src="../assets/images/inner-page/google.png" class="blur-up lazyload"-->
+<!--                                            alt=""> Log In with Google-->
+<!--                                    </a>-->
+<!--                                </li>-->
 
-                            </ul>
-                        </div>
+<!--                            </ul>-->
+<!--                        </div>-->
 
                         <div class="other-log-in">
                             <h6></h6>
