--- a/src/main/resources/templates/client/productdetail.html
+++ b/src/main/resources/templates/client/productdetail.html
@@ -295,26 +295,7 @@
                                                 class="img-fluid blur-up lazyload">
                                         </a>
 
-                                        <ul class="product-option">
-                                            <li data-bs-toggle="tooltip" data-bs-placement="top" title="View">
-                                                <a href="javascript:void(0)" data-bs-toggle="modal"
-                                                    data-bs-target="#view">
-                                                    <i data-feather="eye"></i>
-                                                </a>
-                                            </li>
 
-                                            <li data-bs-toggle="tooltip" data-bs-placement="top" title="Compare">
-                                                <a href="compare.html">
-                                                    <i data-feather="refresh-cw"></i>
-                                                </a>
-                                            </li>
-
-                                            <li data-bs-toggle="tooltip" data-bs-placement="top" title="Wishlist">
-                                                <a href="wishlist.html" class="notifi-wishlist">
-                                                    <i data-feather="heart"></i>
-                                                </a>
-                                            </li>
-                                        </ul>
                                     </div>
                                 </div>
 
@@ -331,16 +312,7 @@
                                         </a>
 
                                         <!-- Rating (hiện tại là tĩnh, bạn có thể thay đổi sau) -->
-                                        <div class="product-rating mt-2">
-                                            <ul class="rating">
-                                                <li><i data-feather="star" class="fill"></i></li>
-                                                <li><i data-feather="star" class="fill"></i></li>
-                                                <li><i data-feather="star" class="fill"></i></li>
-                                                <li><i data-feather="star" class="fill"></i></li>
-                                                <li><i data-feather="star"></i></li>
-                                            </ul>
-                                            <span>(4.0)</span>
-                                        </div>
+
 
                                         <!-- Số lượng tồn kho -->
                                         <h6 class="unit" th:text="'Còn lại: ' + ${relatedProd.stockQuantity}">Còn lại:
@@ -355,11 +327,7 @@
                                         </h5>
 
                                         <div class="add-to-cart-box bg-white">
-                                            <button class="btn btn-add-cart addcart-button">Thêm
-                                                <span class="add-icon bg-light-gray">
-                                                    <i class="fa-solid fa-plus"></i>
-                                                </span>
-                                            </button>
+
                                             <div class="cart_qty qty-box">
                                                 <div class="input-group bg-white">
                                                     <button type="button" class="qty-left-minus bg-gray"
@@ -1046,7 +1014,7 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Write a review</h1>
+                    <h1 class="modal-title fs-5" id="">Write a review</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal">
                         <i class="fa-solid fa-xmark"></i>
                     </button>
@@ -1068,28 +1036,7 @@
                             </div>
                         </div>
                         <div class="review-box">
-                            <div class="product-review-rating">
-                                <label>Rating</label>
-                                <div class="product-rating">
-                                    <ul class="rating">
-                                        <li>
-                                            <i data-feather="star" class="fill"></i>
-                                        </li>
-                                        <li>
-                                            <i data-feather="star" class="fill"></i>
-                                        </li>
-                                        <li>
-                                            <i data-feather="star" class="fill"></i>
-                                        </li>
-                                        <li>
-                                            <i data-feather="star" class="fill"></i>
-                                        </li>
-                                        <li>
-                                            <i data-feather="star"></i>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
+
                         </div>
                         <div class="review-box">
                             <label for="content" class="form-label">Your Question *</label>
