--- a/src/main/resources/templates/client/component/headerClient.html
+++ b/src/main/resources/templates/client/component/headerClient.html
@@ -1,15 +1,16 @@
-<header class="pb-md-4 pb-0" th:fragment="headerClient" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" style="position: fixed; top: 0; left: 0; right: 0; z-index: 1000; background-color:#ffffff; box-shadow: 0 2px 5px rgba(0,0,0,0.1);border-top: 1px solid #cfcfcf;">
-   
-    <div class="top-nav top-header sticky-header" >
+<header class="pb-md-4 pb-0" th:fragment="headerClient" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+    style="position: fixed; top: 0; left: 0; right: 0; z-index: 1000; background-color:#ffffff; box-shadow: 0 2px 5px rgba(0,0,0,0.1);border-top: 1px solid #cfcfcf;">
+
+    <div class="top-nav top-header sticky-header">
         <div class="container-fluid-lg">
             <div class="row">
                 <div class="col-12">
                     <div class="navbar-top">
                         <button class="navbar-toggler d-xl-none d-inline navbar-menu-button" type="button"
-                                data-bs-toggle="offcanvas" data-bs-target="#primaryMenu">
-                                <span class="navbar-toggler-icon">
-                                    <i class="fa-solid fa-bars"></i>
-                                </span>
+                            data-bs-toggle="offcanvas" data-bs-target="#primaryMenu">
+                            <span class="navbar-toggler-icon">
+                                <i class="fa-solid fa-bars"></i>
+                            </span>
                         </button>
                         <a th:href="@{/}" class="web-logo nav-logo">
                             <img src="../assets/images/logo/1.png" class="img-fluid blur-up lazyload" alt="">
@@ -30,13 +31,13 @@
                         <div class="rightside-box">
                             <div class="search-full">
                                 <div class="input-group">
-                                        <span class="input-group-text">
-                                            <i data-feather="search" class="font-light"></i>
-                                        </span>
+                                    <span class="input-group-text">
+                                        <i data-feather="search" class="font-light"></i>
+                                    </span>
                                     <input type="text" class="form-control search-type" placeholder="Search here..">
                                     <span class="input-group-text close-search">
-                                            <i data-feather="x" class="font-light"></i>
-                                        </span>
+                                        <i data-feather="x" class="font-light"></i>
+                                    </span>
                                 </div>
                             </div>
                             <ul class="right-side-menu">
@@ -69,9 +70,10 @@
                                     <div class="onhover-dropdown header-badge">
                                         <button type="button" class="btn p-0 position-relative header-wishlist">
                                             <i data-feather="shopping-cart"></i>
-                                            <span class="position-absolute top-0 start-100 translate-middle badge" id="totalProduct">
-                                                    <span class="visually-hidden">unread messages</span>
-                                                </span>
+                                            <span class="position-absolute top-0 start-100 translate-middle badge"
+                                                id="totalProduct">
+                                                <span class="visually-hidden">unread messages</span>
+                                            </span>
                                         </button>
 
                                         <div class="onhover-div" id="lsCartHeader">
@@ -83,14 +85,14 @@
                                     <div class="delivery-login-box">
 
 
-                                            <div sec:authorize="isAuthenticated()">
-                                                <h5 th:text="${#authentication.principal.getFullName()}"></h5>
+                                        <div sec:authorize="isAuthenticated()">
+                                            <h5 th:text="${#authentication.principal.getFullName()}"></h5>
+                                        </div>
+                                        <div sec:authorize="!isAuthenticated()">
+                                            <div class="delivery-icon">
+                                                <i data-feather="user"></i>
                                             </div>
-                                            <div sec:authorize="!isAuthenticated()">
-                                                <div class="delivery-icon">
-                                                    <i data-feather="user"></i>
-                                                </div>
-                                            </div>
+                                        </div>
                                     </div>
 
                                     <div class="onhover-div onhover-div-login">
@@ -154,9 +156,9 @@
 
                             <ul class="category-list">
                                 <li class="onhover-category-list" th:each="category:${categories}">
-                                    <a th:href = "@{/flower(categoryIDs=${category.categoryId})}" class="category-name">
+                                    <a th:href="@{/flower(categoryIDs=${category.categoryId})}" class="category-name">
                                         <img src="../assets/images/Flower/logo.jpg" alt="">
-                                        <h6 th:text ="${category.categoryName}">Vegetables & Fruit</h6>
+                                        <h6 th:text="${category.categoryName}">Vegetables & Fruit</h6>
 
                                     </a>
 
@@ -172,28 +174,27 @@
                             <div class="offcanvas offcanvas-collapse order-xl-2" id="primaryMenu">
                                 <div class="offcanvas-header navbar-shadow">
                                     <h5>Menu</h5>
-                                    <button class="btn-close lead" type="button"
-                                            data-bs-dismiss="offcanvas"></button>
+                                    <button class="btn-close lead" type="button" data-bs-dismiss="offcanvas"></button>
                                 </div>
                                 <div class="offcanvas-body">
                                     <ul class="navbar-nav">
                                         <li class="nav-item">
-                                            <a class="" style="font-size: 18px"
-                                               data-bs-toggle="" th:href="@{/}">Home</a>
+                                            <a class="" style="font-size: 18px" data-bs-toggle=""
+                                                th:href="@{/}">Home</a>
 
 
                                         </li>
 
                                         <li class="nav-item">
-                                            <a class=" " style="font-size: 18px"  th:href="@{/flower}" href="javascript:void(0)"
-                                               data-bs-toggle="">Shop</a>
+                                            <a class=" " style="font-size: 18px" th:href="@{/flower}"
+                                                href="javascript:void(0)" data-bs-toggle="">Shop</a>
 
 
                                         </li>
 
                                         <li class="nav-item dropdown">
                                             <a class="" style="font-size: 18px" href="javascript:void(0)"
-                                               data-bs-toggle="">Product</a>
+                                                data-bs-toggle="">Product</a>
 
 
                                         </li>
@@ -201,7 +202,7 @@
                                         <li class="nav-item dropdown new-nav-item">
 
                                             <a class="" style="font-size: 18px" href="javascript:void(0)"
-                                               data-bs-toggle="">Pages</a>
+                                                data-bs-toggle="">Pages</a>
 
                                         </li>
                                     </ul>
@@ -217,22 +218,22 @@
 
 
     <script>
-        document.addEventListener('DOMContentLoaded',LoadLsCartHeader);
-        async function LoadLsCartHeader(){
-            const  lsCartHeader = document.getElementById('lsCartHeader');
-            const  totalProduct = document.getElementById('totalProduct');
-            try{
-                const response = await  fetch('/cart/getlsCart');
+        document.addEventListener('DOMContentLoaded', LoadLsCartHeader);
+        async function LoadLsCartHeader() {
+            const lsCartHeader = document.getElementById('lsCartHeader');
+            const totalProduct = document.getElementById('totalProduct');
+            try {
+                const response = await fetch('/cart/getlsCart');
                 const lsCart = await response.json();
 
-                if(!lsCart || lsCart.length === 0){ // Sửa: Dùng .length
-                    lsCartHeader.innerHTML= "Your cart is empty.";
+                if (!lsCart || lsCart.length === 0) { // Sửa: Dùng .length
+                    lsCartHeader.innerHTML = "Your cart is empty.";
                     totalProduct.innerText = 0; // Thêm: Đặt tổng sản phẩm về 0
                     return;
                 }
 
                 // Hiển thị tổng số *loại* sản phẩm (đây là logic cũ của bạn, giữ nguyên)
-                totalProduct.innerText =lsCart.length;
+                totalProduct.innerText = lsCart.length;
 
                 // --- PHẦN CHỈNH SỬA ---
 
@@ -261,7 +262,7 @@
                                 </a>
 
                                 <div class="drop-contain">
-                                    <a href="product-left-thumbnail.html">
+                                    <a href="/product-detail/${item.productId}">
                                         <h5>${item.productName}</h5>
                                     </a>
                                     <h6><span>${item.quantityCart}X</span> ${item.productPrice}</h6>
@@ -275,7 +276,7 @@
                 }).join('');
 
                 // 4. Hiển thị danh sách 5 sản phẩm, nhưng với tổng tiền/số lượng của CẢ GIỎ HÀNG
-                lsCartHeader.innerHTML =` <ul class="cart-list">
+                lsCartHeader.innerHTML = ` <ul class="cart-list">
                                             ${itemHtml}
                                             </ul>
 
@@ -291,7 +292,7 @@
                 `
                 // --- KẾT THÚC PHẦN CHỈNH SỬA ---
 
-            }catch (error) {
+            } catch (error) {
                 console.log(error);
 
             }
@@ -313,23 +314,27 @@
             }
         }
         async function addToCartItem(productId, quantity) {
-            console.log("productId"+ productId + " quantity " + quantity);
+            console.log("productId" + productId + " quantity " + quantity);
             if (quantity < 1) {
                 alert("Quantity must be greater than 0");
                 return;
             }
             try {
-                const response = await fetch(`/cart/addToCart?productId=${productId}&quantity=${quantity}`)
-                if(response.ok){
-                    await LoadLsCartHeader();
+                const response = await fetch(`/cart/addToCart?productId=${productId}&quantity=${quantity}`);
+                const data = await response.json(); // ✅ Đọc phản hồi JSON từ CartController
 
+                if (response.ok && data.status === 'success') {
+                    await LoadLsCartHeader();
+                    // ✅ Dòng này sẽ hiển thị thông báo
                     showAlert('Added to cart successfully!', 'success', 'top-right', 2000);
+                } else {
+                    // ✅ Hiển thị thông báo lỗi từ backend (ví dụ: hết hàng)
+                    showAlert(data.message || 'Failed to add item to cart.', 'danger', 'top-right', 3000);
                 }
             } catch (error) {
                 console.log(error);
+                showAlert('An error occurred. Please try again.', 'danger', 'top-right', 3000);
             }
-
-
         }
 
 
@@ -395,5 +400,4 @@
 
 
 
-</header >
-
+</header>
